# reddog-code-slight

./: .gitmodules  Dockerfile
RedDog.ReceiptGenerationService/: Cargo.toml  slightfile.toml
RedDog.ReceiptGenerationService/src/: main.rs
RedDog.ReceiptGenerationService/src/processor/: mod.rs  processor.rs  types.rs
deploy/manual/: deploy.sh
deploy/manual/bicep/: main.bicep
deploy/manual/bicep/infra/: appconfiguration.bicep  keyvault.bicep  redis.bicep  servicebus.bicep  sqlserver.bicep  storage.bicep
deploy/manual/cluster/: namespace.yaml
deploy/manual/cluster/components/: reddog.binding.receipt.yaml  reddog.pubsub.yaml  reddog.secretstore.yaml  reddog.state.makeline.yaml
deploy/manual/cluster/deployments/: receipt-generation-service-slight.yaml  receipt-generation-service.yaml  ui.yaml  virtual-customers.yaml  virtual-worker.yaml
deploy/rad/: deploy.sh  main.bicep
deploy/rad/infra/: azure-sqlserver.bicep  dapr-pub-sub.bicep  dapr-state-store.bicep  routes-and-gateway.bicep
deploy/rad/services/: accounting-service.bicep  bootstrapper.bicep  make-line-service.bicep  order-service.bicep  ui.bicep  virtual-customers.bicep
