[package]
name = "receipt_generation_service"
version = "0.1.0"
edition = "2021"
authors = ["App Innovation GBB Team"]

[[bin]]
name = "receipt_generation_service"
test = false

[dependencies]
anyhow = "1"
cloudevents-sdk = { version = "0.5.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a79a4be33d76ddf62839ba71602c26a96610ef7c" }
wit-error-rs = { git = "https://github.com/danbugs/wit-error-rs", rev = "05362f1a4a3a9dc6a1de39195e06d2d5d6491a5e" }

[workspace]
